--- a/Html5Beadando/wwwroot/pages/species.html
+++ b/Html5Beadando/wwwroot/pages/species.html
@@ -2,7 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script src="../js/site.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/siteSpecies.js"></script>
+
     <link rel="stylesheet" href="../css/style.css" />
     <title></title>
 </head>
@@ -35,10 +41,10 @@
 
 
 
-    <div class="mainpage">
+    <div class="mainpage" id="mp" name="mp">
 
         <!--ide-->
-        <button onclick="getSpecies()">Hero</button>
+        
         <!--ide vége-->
     </div>
 
